proofed german + released

--- a/villataika.fi/de/groups.html
+++ b/villataika.fi/de/groups.html
@@ -12,10 +12,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Standard (shared)" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Gruppen" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Standard (shared)</title>
+  <meta http-equiv="Content-Language" content="de"/>  
+  <title>Bed &amp; Breakfast Villa Taika : Gruppen</title>
   
 </head>
 
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">asian elegance</div>
+      <div id="slogan">Asatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -40,48 +40,48 @@
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.php">Reservation</a>
+            <a href="booking.php">Buchung</a>
+          </li>
+          <li class="active">
+            <a href="groups.html">Gruppen</a>
           </li>
           <li >
-            <a href="groups.html">Groups</a>
-          </li>
-          <li >
-            <a href="map.html">Map</a>
+            <a href="map.html">Karte</a>
           </li>
           <li >
             <a href="photos.html">Photos</a>
           </li>
           <li >
-            <a href="activities.html">Activities</a>
+            <a href="activities.html">Aktivitäten</a>
           </li>
       </ul>
     </div>
     <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
-          <span>Rooms</span>
+          <span>Zimmer</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Suites (ensuite)</a></li>
+        <li><a href="deluxe.html">Deluxe (mit Toilette)</a></li>
+        <li><a href="standard.html">Standard</a></li>
       </ul>
 
       <div class="divider"></div>
     
-        <a href="standard.html" class='selected'>
+        <a href="../en/groups.html" >
           <img src="../images/en.gif" alt="en"/> </a>
-        <a href="../fi/standard.html" >
+        <a href="../fi/groups.html" >
           <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../de/standard.html" >
+        <a href="groups.html" class='selected'>
           <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
-        <a href="news.html">  <span>News</span> </a>
+        <a href="news.html">  <span>Neues</span> </a>
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Affordable accommodation in redocorated granery 
+          Rustikale Unterkunft im renovierten Blockhaus 
         </a>
       </div>
     </div>
@@ -90,28 +90,35 @@
 
   <div id="rcol">
     <div id="rcontent">
-        <div class="box">
-    <div class="boxinner">
-      <div class="captionedimage">
-        <a href="../images/rose.jpg" rel="lightbox[standard]" title="Rose room">
-          <img src="../images/rose_small.jpg" />
-        </a>
-      </div>
-      <h2> Rose room </h2>
-      The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br/> It has a double bed and a cosy sofa for two. <br/> It shares a toilet and shower with the next door Sky room. <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> The price for two is 75€/ Single 60€
-    </div>
-  </div>
-  <div class="box">
-    <div class="boxinner">
-      <div class="captionedimage">
-        <a href="../images/sky.jpg" rel="lightbox[standard]" title="Sky room">
-          <img src="../images/sky_small.jpg" />
-        </a>
-      </div>
-      <h2> Sky room </h2>
-      The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br/> It shares a toilet and shower with the next door Rose room.  <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> There is a double bed, and space for an extra bed on request. <br/> The price for two is 75€/ Single 60€
-    </div>
-  </div>
+      <div class="left">
+  <img src ="../images/sali.gif" width=450px height=336px/>
+</div>
+<div class="left2">
+  <img src ="../images/allas.jpg" alt="allas" />
+  <img src ="../images/blank.gif" height="1px" width="140px" alt="blank"/>
+  <img src ="../images/garden_group.jpg" height="196" width="140px" alt="garden"/>
+</div>
+<div class="right">
+  Villa Taika eignet sich gut für Kurse oder andere Gruppenaktivitäten.<br/><br/> <ul> <li> grosser Gruppen-Saal </li> <li> grosser Garten </li> <li> gutes Sound und Video Equipment</li> <li> Decken und Kissen</li> <li> grosse Sauna mit Becken</li> <li> 20-30 Schlafplatze</li> <li> seperates Zimmer für Ausbilder</li> <li> Aktivitäten in der Nähe</li> <li> vegetarisches Essen</li> </ul>
+</div>
+<div class="divider"> </div>
+<div class="left">
+  <br/>
+  Unser Saal ist auf schöne Weise eingerichtet und gross genug für viele Aktivitäten, zb Yoga, Tanzen,
+Körperarbeit oder andere Gruppenarbeit. <br/>
+Der  Garten ist gross und offen und eignet sich gut für ruihge Aktivitäten wir Yoga oder Meditation, 
+und bietet auch genug Sitzmöglichkeiten (auch bedacht) für Gruppen. <br/>
+Der Saal ist ausgerüstet mit einem hochqualitativen Audio System, und auch ein Videoprojektor ist 
+vorhanden. <br/>
+Für ruhige Arbeit oder Pausen stehen Decken und Kissen zur Verfügung. <br/>
+Die Sauna ist auch für grösserer Gruppen geeignet und zum abkühlen haben wir einen kleinen Pool. <br/>
+In den 8 Zimmern können bequem 20 und mit Extra-Betten bis zu 30 Personen übernachten.<br/>
+Zusätzlich zu den lokalen Resaurants bieten wir auch vegetarisches Essem im Haus an. <br/>
+Preise sind von vielen Faktoren abhängig, bitte setzen Sie sich mit uns in Verbindung um ein geeignetes
+Paket zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Peise zwischen 50 
+bis 65 pro Person und Tag für Vollpension mit Saalbenutzung üblich. <br/> <br/>
+</div>
+
 
     </div>
     <div class="divider"></div>
@@ -127,7 +134,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    tel +358- (0)40 704 6689
+    Tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
