--- a/villataika.fi/de/index.html
+++ b/villataika.fi/de/index.html
@@ -12,10 +12,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Standard (shared)" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Home" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Standard (shared)</title>
+  <meta http-equiv="Content-Language" content="de"/>  
+  <title>Bed &amp; Breakfast Villa Taika : Home</title>
   
 </head>
 
@@ -27,61 +27,61 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">asian elegance</div>
+      <div id="slogan">Asatische Eleganz</div>
   </div>
 
   <div id="lcol">
     <div id="menu">
       <ul>
-          <li >
+          <li class="active">
             <a href="index.html">Home</a>
           </li>
           <li >
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.php">Reservation</a>
+            <a href="booking.php">Buchung</a>
           </li>
           <li >
-            <a href="groups.html">Groups</a>
+            <a href="groups.html">Gruppen</a>
           </li>
           <li >
-            <a href="map.html">Map</a>
+            <a href="map.html">Karte</a>
           </li>
           <li >
             <a href="photos.html">Photos</a>
           </li>
           <li >
-            <a href="activities.html">Activities</a>
+            <a href="activities.html">Aktivitäten</a>
           </li>
       </ul>
     </div>
     <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
-          <span>Rooms</span>
+          <span>Zimmer</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Suites (ensuite)</a></li>
+        <li><a href="deluxe.html">Deluxe (mit Toilette)</a></li>
+        <li><a href="standard.html">Standard</a></li>
       </ul>
 
       <div class="divider"></div>
     
-        <a href="standard.html" class='selected'>
+        <a href="../en/index.html" >
           <img src="../images/en.gif" alt="en"/> </a>
-        <a href="../fi/standard.html" >
+        <a href="../fi/index.html" >
           <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../de/standard.html" >
+        <a href="index.html" class='selected'>
           <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
-        <a href="news.html">  <span>News</span> </a>
+        <a href="news.html">  <span>Neues</span> </a>
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Affordable accommodation in redocorated granery 
+          Rustikale Unterkunft im renovierten Blockhaus 
         </a>
       </div>
     </div>
@@ -90,28 +90,40 @@
 
   <div id="rcol">
     <div id="rcontent">
-        <div class="box">
-    <div class="boxinner">
-      <div class="captionedimage">
-        <a href="../images/rose.jpg" rel="lightbox[standard]" title="Rose room">
-          <img src="../images/rose_small.jpg" />
-        </a>
-      </div>
-      <h2> Rose room </h2>
-      The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br/> It has a double bed and a cosy sofa for two. <br/> It shares a toilet and shower with the next door Sky room. <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> The price for two is 75€/ Single 60€
+      <div id="lotus">
+  <a href='suites.html'>
+   <img alt='Aurinko sviitti' border='0' height='414' src='../images/aurinko.jpg' valign='top' width='312' />
+  </a>
+</div>
+
+<div id="aurinkowrapper">
+  
+  <div id="aurinko">
+    <a href='suites.html'>
+      <img alt='Lootus sviitti' border='0' height='310' src='../images/lootus_1.jpg' width='246' />
+    </a>
+  </div>
+
+  <div id="extra">
+    <div class="top">
+      <img alt='' height='147' src='../images/kukka.jpg' width='197' />
+    </div>
+    <div class="bottom">
+      <img alt='' height='139' src='../images/talo.jpg' width='197' />
     </div>
   </div>
-  <div class="box">
-    <div class="boxinner">
-      <div class="captionedimage">
-        <a href="../images/sky.jpg" rel="lightbox[standard]" title="Sky room">
-          <img src="../images/sky_small.jpg" />
-        </a>
-      </div>
-      <h2> Sky room </h2>
-      The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br/> It shares a toilet and shower with the next door Rose room.  <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> There is a double bed, and space for an extra bed on request. <br/> The price for two is 75€/ Single 60€
-    </div>
+
+  <div id="maintext">
+    Asiatische Eleganz inmiten unberührter Natur.
+
   </div>
+  <div class="subtext">
+    <strong> Villa Taika </strong> 
+    ist ein charmantes Bed &amp; Breakfast in Antskog, nahe Fiskars, knapp über eine Autostunde von Helsinki entfernt.
+  </div>
+</div>
+
+
 
     </div>
     <div class="divider"></div>
@@ -127,7 +139,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    tel +358- (0)40 704 6689
+    Tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
