--- a/villataika.fi/de/map.html
+++ b/villataika.fi/de/map.html
@@ -12,10 +12,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Standard (shared)" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Karte" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Standard (shared)</title>
+  <meta http-equiv="Content-Language" content="de"/>  
+  <title>Bed &amp; Breakfast Villa Taika : Karte</title>
   
 </head>
 
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">asian elegance</div>
+      <div id="slogan">Asatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -40,48 +40,48 @@
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.php">Reservation</a>
+            <a href="booking.php">Buchung</a>
           </li>
           <li >
-            <a href="groups.html">Groups</a>
+            <a href="groups.html">Gruppen</a>
           </li>
-          <li >
-            <a href="map.html">Map</a>
+          <li class="active">
+            <a href="map.html">Karte</a>
           </li>
           <li >
             <a href="photos.html">Photos</a>
           </li>
           <li >
-            <a href="activities.html">Activities</a>
+            <a href="activities.html">Aktivitäten</a>
           </li>
       </ul>
     </div>
     <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
-          <span>Rooms</span>
+          <span>Zimmer</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Suites (ensuite)</a></li>
+        <li><a href="deluxe.html">Deluxe (mit Toilette)</a></li>
+        <li><a href="standard.html">Standard</a></li>
       </ul>
 
       <div class="divider"></div>
     
-        <a href="standard.html" class='selected'>
+        <a href="../en/map.html" >
           <img src="../images/en.gif" alt="en"/> </a>
-        <a href="../fi/standard.html" >
+        <a href="../fi/map.html" >
           <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../de/standard.html" >
+        <a href="map.html" class='selected'>
           <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
-        <a href="news.html">  <span>News</span> </a>
+        <a href="news.html">  <span>Neues</span> </a>
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Affordable accommodation in redocorated granery 
+          Rustikale Unterkunft im renovierten Blockhaus 
         </a>
       </div>
     </div>
@@ -90,28 +90,21 @@
 
   <div id="rcol">
     <div id="rcontent">
-        <div class="box">
-    <div class="boxinner">
-      <div class="captionedimage">
-        <a href="../images/rose.jpg" rel="lightbox[standard]" title="Rose room">
-          <img src="../images/rose_small.jpg" />
-        </a>
-      </div>
-      <h2> Rose room </h2>
-      The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br/> It has a double bed and a cosy sofa for two. <br/> It shares a toilet and shower with the next door Sky room. <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> The price for two is 75€/ Single 60€
-    </div>
-  </div>
-  <div class="box">
-    <div class="boxinner">
-      <div class="captionedimage">
-        <a href="../images/sky.jpg" rel="lightbox[standard]" title="Sky room">
-          <img src="../images/sky_small.jpg" />
-        </a>
-      </div>
-      <h2> Sky room </h2>
-      The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br/> It shares a toilet and shower with the next door Rose room.  <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> There is a double bed, and space for an extra bed on request. <br/> The price for two is 75€/ Single 60€
-    </div>
-  </div>
+        <div class="left">
+<iframe width="600" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+</div>
+<div class="right">
+<b>Villa Taika</b>  befindet sich in dem Dorf Antskog, 4km nördlich von Fiskars, ca 100km west von Helsinki.
+<br/>
+<br/>
+Villa Taika ist ein grosses weisses Haus auf einem kleinen Hügel, direkt an der Stasse durch Antskog.
+<br/>
+<br/>
+Von Fiskars kommend ist Villa Taika das <em>dritte</em> Haus auf der rechten Seite.
+<br/>
+<br/>
+Direkt vom Haus kann man zwei Seen sehen, und die Natur lädt zum Spazierengehen ein.
+</div>
 
     </div>
     <div class="divider"></div>
@@ -127,7 +120,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    tel +358- (0)40 704 6689
+    Tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
