--- a/villataika.fi/de/news.html
+++ b/villataika.fi/de/news.html
@@ -12,10 +12,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Standard (shared)" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Neues" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Standard (shared)</title>
+  <meta http-equiv="Content-Language" content="de"/>  
+  <title>Bed &amp; Breakfast Villa Taika : Neues</title>
   
 </head>
 
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">asian elegance</div>
+      <div id="slogan">Asatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -40,48 +40,48 @@
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.php">Reservation</a>
+            <a href="booking.php">Buchung</a>
           </li>
           <li >
-            <a href="groups.html">Groups</a>
+            <a href="groups.html">Gruppen</a>
           </li>
           <li >
-            <a href="map.html">Map</a>
+            <a href="map.html">Karte</a>
           </li>
           <li >
             <a href="photos.html">Photos</a>
           </li>
           <li >
-            <a href="activities.html">Activities</a>
+            <a href="activities.html">Aktivitäten</a>
           </li>
       </ul>
     </div>
     <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
-          <span>Rooms</span>
+          <span>Zimmer</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Suites (ensuite)</a></li>
+        <li><a href="deluxe.html">Deluxe (mit Toilette)</a></li>
+        <li><a href="standard.html">Standard</a></li>
       </ul>
 
       <div class="divider"></div>
     
-        <a href="standard.html" class='selected'>
+        <a href="../en/news.html" >
           <img src="../images/en.gif" alt="en"/> </a>
-        <a href="../fi/standard.html" >
+        <a href="../fi/news.html" >
           <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../de/standard.html" >
+        <a href="news.html" class='selected'>
           <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
-        <a href="news.html">  <span>News</span> </a>
+        <a href="news.html">  <span>Neues</span> </a>
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Affordable accommodation in redocorated granery 
+          Rustikale Unterkunft im renovierten Blockhaus 
         </a>
       </div>
     </div>
@@ -90,28 +90,32 @@
 
   <div id="rcol">
     <div id="rcontent">
-        <div class="box">
-    <div class="boxinner">
+      <div class="newsbox">
+  <div class="boxinner">
       <div class="captionedimage">
-        <a href="../images/rose.jpg" rel="lightbox[standard]" title="Rose room">
-          <img src="../images/rose_small.jpg" />
+        <a href="../news/large/renovate.jpg" rel="lightbox" title="Rustikale Unterkunft im renovierten Blockhaus">
+          <img src="../news/renovate.jpg" height=100>
         </a>
       </div>
-      <h2> Rose room </h2>
-      The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br/> It has a double bed and a cosy sofa for two. <br/> It shares a toilet and shower with the next door Sky room. <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> The price for two is 75€/ Single 60€
-    </div>
+    <h2> Rustikale Unterkunft im renovierten Blockhaus </h2>
+    Wir haben Teil des Hofgebebäudes renoviert und ein schönes Blockhaus - Zimmer mit Himmelbett ausgestattet. Das einfache aber bezaubernde Zimmer kostet 65€ für zwei Personen. <br/> Toilette und Dusche befinden sich im Hautgebäude.
   </div>
-  <div class="box">
-    <div class="boxinner">
+</div>
+<div class='line'> &nbsp;</div>
+<div class="newsbox">
+  <div class="boxinner">
       <div class="captionedimage">
-        <a href="../images/sky.jpg" rel="lightbox[standard]" title="Sky room">
-          <img src="../images/sky_small.jpg" />
+        <a href="../news/large/renewable.jpg" rel="lightbox" title="Ököenergie.">
+          <img src="../news/renewable.jpg" height=100>
         </a>
       </div>
-      <h2> Sky room </h2>
-      The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br/> It shares a toilet and shower with the next door Rose room.  <br/> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br/> There is a double bed, and space for an extra bed on request. <br/> The price for two is 75€/ Single 60€
-    </div>
+    <h2> Ököenergie. </h2>
+    Villa Taika ist jetzt komplett auf erneuerbare Energie umgestiegen <br/> Zusätlich zu dem schon vor einigen Jahren installiertem Wasserführendem Kamin, haben wir eine neuen Holzkessel installiert. Der moderne Holzvergaser glänzt mit einem Wirkungsgrad von bis zu 91%. <br/> Zusätzlich ist eine neue Wärmepumpe mit einem cop Wert von 5,6 zum Energiemix dazugekommen. Aber auch die elektrische Energie ist 100% erneuerbar, dank der Firma Kraft and Kultur.
   </div>
+</div>
+<div class='line'> &nbsp;</div>
+
+
 
     </div>
     <div class="divider"></div>
@@ -127,7 +131,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    tel +358- (0)40 704 6689
+    Tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
