--- a/villataika.fi/de/photos.html
+++ b/villataika.fi/de/photos.html
@@ -12,10 +12,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Kuvat" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Photos" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Kuvat</title>
+  <meta http-equiv="Content-Language" content="de"/>  
+  <title>Bed &amp; Breakfast Villa Taika : Photos</title>
   
 </head>
 
@@ -27,61 +27,61 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">taianomaista tyylikkyyttä</div>
+      <div id="slogan">Asatische Eleganz</div>
   </div>
 
   <div id="lcol">
     <div id="menu">
       <ul>
           <li >
-            <a href="index.html">Kotisivu</a>
+            <a href="index.html">Home</a>
           </li>
           <li >
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.php">Varaus</a>
+            <a href="booking.php">Buchung</a>
           </li>
           <li >
-            <a href="groups.html">Ryhmille</a>
+            <a href="groups.html">Gruppen</a>
           </li>
           <li >
-            <a href="map.html">Kartta</a>
+            <a href="map.html">Karte</a>
           </li>
           <li class="active">
-            <a href="photos.html">Kuvat</a>
+            <a href="photos.html">Photos</a>
           </li>
           <li >
-            <a href="activities.html">Tekemistä</a>
+            <a href="activities.html">Aktivitäten</a>
           </li>
       </ul>
     </div>
     <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
-          <span>Huoneet</span>
+          <span>Zimmer</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
-        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
-        <li><a href="standard.html">Standard (jaettu)</a></li>
+        <li><a href="suites.html">Suites (ensuite)</a></li>
+        <li><a href="deluxe.html">Deluxe (mit Toilette)</a></li>
+        <li><a href="standard.html">Standard</a></li>
       </ul>
 
       <div class="divider"></div>
     
         <a href="../en/photos.html" >
           <img src="../images/en.gif" alt="en"/> </a>
-        <a href="photos.html" class='selected'>
+        <a href="../fi/photos.html" >
           <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../de/photos.html" >
+        <a href="photos.html" class='selected'>
           <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
-        <a href="news.html">  <span>Uutiset</span> </a>
+        <a href="news.html">  <span>Neues</span> </a>
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Edullinen majoitus kauniissa ulko aitassamme. 
+          Rustikale Unterkunft im renovierten Blockhaus 
         </a>
       </div>
     </div>
@@ -92,82 +92,82 @@
     <div id="rcontent">
       <div class="photobox_w">
   <div class="eiole">
-    <a href="../photos/large/w_pavillion.jpg" rel="lightbox[photos]" title="Taika paviljonki">
-      <img src="../photos/w_pavillion.jpg" alt="Taika paviljonki"/>
+    <a href="../photos/large/w_pavillion.jpg" rel="lightbox[photos]" title="Pavillion">
+      <img src="../photos/w_pavillion.jpg" alt="Pavillion"/>
     </a><br/>
-    Taika paviljonki
+    Pavillion
   </div>
 </div>
 <div class="photobox_w">
   <div class="eiole">
-    <a href="../photos/large/w_kukkat.jpg" rel="lightbox[photos]" title="Punaiset liljat">
-      <img src="../photos/w_kukkat.jpg" alt="Punaiset liljat"/>
+    <a href="../photos/large/w_kukkat.jpg" rel="lightbox[photos]" title="Blumen im Garten">
+      <img src="../photos/w_kukkat.jpg" alt="Blumen im Garten"/>
     </a><br/>
-    Punaiset liljat
+    Blumen im Garten
   </div>
 </div>
 <div class="photobox_w">
   <div class="eiole">
-    <a href="../photos/large/w_piha.jpg" rel="lightbox[photos]" title="Puutarhamme">
-      <img src="../photos/w_piha.jpg" alt="Puutarhamme"/>
+    <a href="../photos/large/w_piha.jpg" rel="lightbox[photos]" title="Garten im Sommer">
+      <img src="../photos/w_piha.jpg" alt="Garten im Sommer"/>
     </a><br/>
-    Puutarhamme
+    Garten im Sommer
   </div>
 </div>
 <div class="photobox_w">
   <div class="eiole">
-    <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Tanssivat  sammakot">
-      <img src="../photos/w_frogs.jpg" alt="Tanssivat  sammakot"/>
+    <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Tanzende Frösche">
+      <img src="../photos/w_frogs.jpg" alt="Tanzende Frösche"/>
     </a><br/>
-    Tanssivat  sammakot
+    Tanzende Frösche
   </div>
 </div>
 <div class="photobox_w">
   <div class="eiole">
-    <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="Terassi">
-      <img src="../photos/w_terasse.jpg" alt="Terassi"/>
+    <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="Terasse im Garten">
+      <img src="../photos/w_terasse.jpg" alt="Terasse im Garten"/>
     </a><br/>
-    Terassi
+    Terasse im Garten
   </div>
 </div>
 <div class="photobox_w">
   <div class="eiole">
-    <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Suihkulähde">
-      <img src="../photos/w_peony.jpg" alt="Suihkulähde"/>
+    <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Brunnen im Garten">
+      <img src="../photos/w_peony.jpg" alt="Brunnen im Garten"/>
     </a><br/>
-    Suihkulähde
+    Brunnen im Garten
   </div>
 </div>
 <div class="photobox_h">
   <div class="eiole">
-    <a href="../photos/large/h_aurinko_wc.jpg" rel="lightbox[photos]" title="Aurinko wc">
-      <img src="../photos/h_aurinko_wc.jpg" alt="Aurinko wc"/>
+    <a href="../photos/large/h_aurinko_wc.jpg" rel="lightbox[photos]" title="Sonnen Suite">
+      <img src="../photos/h_aurinko_wc.jpg" alt="Sonnen Suite"/>
     </a><br/>
-    Aurinko wc
+    Sonnen Suite
   </div>
 </div>
 <div class="photobox_h">
   <div class="eiole">
-    <a href="../photos/large/h_curves.jpg" rel="lightbox[photos]" title="Aurinko sviitin kaiverrukset">
-      <img src="../photos/h_curves.jpg" alt="Aurinko sviitin kaiverrukset"/>
+    <a href="../photos/large/h_curves.jpg" rel="lightbox[photos]" title="Sonnen Suite">
+      <img src="../photos/h_curves.jpg" alt="Sonnen Suite"/>
     </a><br/>
-    Aurinko sviitin kaiverrukset
+    Sonnen Suite
   </div>
 </div>
 <div class="photobox_h">
   <div class="eiole">
-    <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lootus WC">
-      <img src="../photos/h_lootus_wc.jpg" alt="Lootus WC"/>
+    <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lotus suite">
+      <img src="../photos/h_lootus_wc.jpg" alt="Lotus suite"/>
     </a><br/>
-    Lootus WC
+    Lotus suite
   </div>
 </div>
 <div class="photobox_h">
   <div class="eiole">
-    <a href="../photos/large/h_highview.jpg" rel="lightbox[photos]" title="Villa Taika korkealta">
-      <img src="../photos/h_highview.jpg" alt="Villa Taika korkealta"/>
+    <a href="../photos/large/h_highview.jpg" rel="lightbox[photos]" title="Villa Taika von hoch oben">
+      <img src="../photos/h_highview.jpg" alt="Villa Taika von hoch oben"/>
     </a><br/>
-    Villa Taika korkealta
+    Villa Taika von hoch oben
   </div>
 </div>
 
@@ -186,7 +186,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    puh +358- (0)40 704 6689
+    Tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
