--- a/villataika.fi/en/bed.html
+++ b/villataika.fi/en/bed.html
@@ -69,10 +69,12 @@
 
       <div class="divider"></div>
     
-        <a href="../fi/bed.html" >  
-          <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="bed.html" class='selected'>  
+        <a href="bed.html" class='selected'>
           <img src="../images/en.gif" alt="en"/> </a>
+        <a href="../fi/bed.html" >
+          <img src="../images/fi.gif" alt="fi"/> </a>
+        <a href="../de/bed.html" >
+          <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -90,11 +92,10 @@
     <div id="rcontent">
       <div class="wide_bedbox">
   <div class="bedbox">
-      Welcome to the charming and peaceful Villa Taika! <br/> We have created unique B&amp;B, with 8 individually decorated rooms. Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the pieces of furniture, that we selected to our rooms. <br/> We hope you will be revitalisedand rested in the beauty of our surroundings! <br/>
+      Welcome to the charming and peaceful Villa Taika! <br/> We have created a unique B&amp;B, with 8 individually decorated rooms. Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the pieces of furniture, that we selected to our rooms. <br/> We hope you will be revitalised and rested in the beauty of our surroundings! <br/>
 In the backyard we have a garden with the pond and waterfall. You can relax in the garden by listening to the soothing sound of the water or make trips to the nearby tourist sights. The Billnäs 15km, Mustio castle 15km, beautiful towns of Tammisaari 35 km and Hanko 65km
   </div>
 </div>
-<div class="divider"></div>
 
 <div class="widebox">
     <br/>
@@ -129,7 +130,7 @@ In the backyard we have a garden with the pond and waterfall. You can relax in t
 <br/>
 <div class="wide_bedbox">
   <div class="bedbox">
-      The room price is for two people, between 75 and 95€ , and extra beds cost 25€. <br/> The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br/> You can sign into your room between 14-19 . Please let us know what time you'll be arriving! <br/> Checkout by 12 o'clock
+      The room price is for two people, between 75 and 95€ , and extra beds cost 25€. <br/> The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br/> You can sign into your room between 14-19 . Please let us know what time you'll be arriving! <br/> Checkout by 12 o'clock. <br/> Stays of 2 or more nights require 25% downpayment.
   </div>
   
 </div>
@@ -149,7 +150,7 @@ In the backyard we have a garden with the pond and waterfall. You can relax in t
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    puh 040 704 6689
+    tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
