--- a/villataika.fi/fi/standard.html
+++ b/villataika.fi/fi/standard.html
@@ -69,10 +69,12 @@
 
       <div class="divider"></div>
     
-        <a href="standard.html" class='selected'>  
-          <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../en/standard.html" >  
+        <a href="../en/standard.html" >
           <img src="../images/en.gif" alt="en"/> </a>
+        <a href="standard.html" class='selected'>
+          <img src="../images/fi.gif" alt="fi"/> </a>
+        <a href="../de/standard.html" >
+          <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -125,7 +127,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    puh 040 704 6689
+    puh +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
