--- a/villataika.fi/fi/suites.html
+++ b/villataika.fi/fi/suites.html
@@ -69,10 +69,12 @@
 
       <div class="divider"></div>
     
-        <a href="suites.html" class='selected'>  
-          <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../en/suites.html" >  
+        <a href="../en/suites.html" >
           <img src="../images/en.gif" alt="en"/> </a>
+        <a href="suites.html" class='selected'>
+          <img src="../images/fi.gif" alt="fi"/> </a>
+        <a href="../de/suites.html" >
+          <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -118,7 +120,7 @@
         </a>
       </div>
       <h2> Ametisti huone </h2>
-      <b>Ametisti huone </b>on valoisa ja kaunis 15m² huone. Huonetta koristaa käsinkaiverrettu reliefi ja uniikki käsinmaalattu kaappi. <br/> Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode. Huoneessa on oma wc ja suihku.<br/> Hinta on 85€ /2hh ja 70€/ 1hh
+      <b>Ametisti huone </b>on valoisa ja kaunis huone. Huonetta koristaa käsinkaiverrettu reliefi ja uniikki käsinmaalattu kaappi. <br/> Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode. Huoneessa on oma wc ja suihku.<br/> Hinta on 85€ /2hh ja 70€/ 1hh
     </div>
   </div>
 
@@ -136,7 +138,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    puh 040 704 6689
+    puh +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
