--- a/villataika.fi/de/bed.html
+++ b/villataika.fi/de/bed.html
@@ -12,9 +12,9 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Bed &amp; Breakfast" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Bed &amp; Breakfast" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Language" content="fi"/>  
+  <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Bed &amp; Breakfast</title>
   
 </head>
@@ -27,61 +27,61 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">taianomaista tyylikkyyttä</div>
+      <div id="slogan">Asatische Eleganz</div>
   </div>
 
   <div id="lcol">
     <div id="menu">
       <ul>
           <li >
-            <a href="index.html">Kotisivu</a>
+            <a href="index.html">Home</a>
           </li>
           <li class="active">
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.php">Varaus</a>
+            <a href="booking.php">Buchung</a>
           </li>
           <li >
-            <a href="groups.html">Ryhmille</a>
+            <a href="groups.html">Gruppen</a>
           </li>
           <li >
-            <a href="map.html">Kartta</a>
+            <a href="map.html">Karte</a>
           </li>
           <li >
-            <a href="photos.html">Kuvat</a>
+            <a href="photos.html">Photos</a>
           </li>
           <li >
-            <a href="activities.html">Tekemistä</a>
+            <a href="activities.html">Aktivitäten</a>
           </li>
       </ul>
     </div>
     <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
-          <span>Huoneet</span>
+          <span>Zimmer</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
-        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
-        <li><a href="standard.html">Standard (jaettu)</a></li>
+        <li><a href="suites.html">Suites (ensuite)</a></li>
+        <li><a href="deluxe.html">Deluxe (mit Toilette)</a></li>
+        <li><a href="standard.html">Standard</a></li>
       </ul>
 
       <div class="divider"></div>
     
         <a href="../en/bed.html" >
           <img src="../images/en.gif" alt="en"/> </a>
-        <a href="bed.html" class='selected'>
+        <a href="../fi/bed.html" >
           <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../de/bed.html" >
+        <a href="bed.html" class='selected'>
           <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
-        <a href="news.html">  <span>Uutiset</span> </a>
+        <a href="news.html">  <span>Neues</span> </a>
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Edullinen majoitus kauniissa ulko aitassamme. 
+          Rustikale Unterkunft im renovierten Blockhaus 
         </a>
       </div>
     </div>
@@ -92,7 +92,8 @@
     <div id="rcontent">
       <div class="wide_bedbox">
   <div class="bedbox">
-      Tervetuloa viehättävään Villa Taikaan! <br/>Olemme luoneet B&amp;;n, jossa jokainen huone on uniikisti sisustettu. <br/> Matkoillamme Aasiaan olemme usein lumoutuneet sen kauneudesta. Valitsimme huoneisiimme yksilölliset huonekalut muistuttamaan ja inspiroimaan elämän ainutlaatuisesta kauneudesta. <br/> Toivomme että sinäkin nautit siitä täällä luonamme Villa Taiassa! <br/>Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit nauttia olostasi vesiputouksen solinaa kuunnellen. <br/> <br/> Tulopäivänä huoneeseen voi saapua klo 14-19. Ilmoitathan saapumisajan etukäteen!! Huone luovutetaan klo 12 mennessä.<br/>Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, Tammisaari 35km.
+      Willkommen in der charmanten Atmosphäre der Villa Taika! <br/><br/> Inspiriert von unseren Reisen in den Orient, brachten wir die Schönheit und Magie mit uns und haben so unser einzigartiges B&B mit 8 individuell eingerichteten Zimmern kreiert. <br/> Wir hoffen Sie werden neu belebt und gut geruht durch unsere wunderschöne Umgebung!<br/>
+In der Nähe sind mehrere Sehenswürdigkeiten, so kann man leicht den Tag in Fiskars (5km), Bilnäs (15km), Musto (15km), Tammisaari (35km) oder Hanko (65km) verbringen. Oder enspannen Sie sich einfach im liebevoll angelegten Gartem zum Pläzschern des Wasserfalles. <br/>
   </div>
 </div>
 
@@ -100,36 +101,36 @@
     <br/>
   <div class="smallbox">
     <a href="suites.html">
-      Sviitit (suihkulla) 
+      Suites (ensuite) 
       <img src="../images/sun_small.jpg"  
-          alt=Sviitit (suihkulla)  
+          alt=Suites (ensuite)  
           height="187px"  width="250px" />
 </a>    <br/>
-    3 sviittiä omalla suihkulla 85/90/95
+    3 suites mit Dusche und Toilette 85-95 €
   </div>
   <div class="smallbox">
     <a href="deluxe.html">
-    Deluxe (wc:llä) 
-      <img src="/images/orange_small.jpg"  
-          alt=Deluxe (wc:llä)  
+    Deluxe (mit Toilette) 
+      <img src="../images/orange_small.jpg"  
+          alt=Deluxe (mit Toilette)  
           height="187px"  width="250px" />
 </a>    <br/>
-    2 huonetta omalla wc:llä (yläkerrassa) 75€/2hh ja 60€/1hh
+    2 Zimmer mit eigener Toilette 75€
   </div>
   <div class="smallbox">
     <a href="standard.html">
-    Standard (jaettu) 
+    Standard 
       <img src="../images/rose_small.jpg"  
-          alt="Standard (jaettu)"  
+          alt="Standard"  
           height="187px"  width="250px" />
 </a>    <br/>
-    2 huonetta, jotka jakavat yhteisen suihkun, 75€/2hh ja 60€/1hh
+    2 Zimmer (teilen Dusche/Toilette) 75€
   </div>
 </div>
 <br/>
 <div class="wide_bedbox">
   <div class="bedbox">
-      Huoneen hinta on kahdelle ja lisävuode on 25€. Huoneen hintaan kuuluu aamupala (tarjoillaan klo 8:30-10:00), liinavaatteet ja pyyhkeet. Huoneiden hinnat ovat 75-95 € . Voimme majoittaa jopa 25-30 hengen ryhmän. Peruutus on tehtävä 48h ennen .
+      Die Preise für ein Doppelzimmer sind zwischen 75 and 95€ für 2 Personen, aber mehrere Zimmer sind geräumig genug für ein drittes oder sogar viertes Bett (25€). <br/> Frühstück , zwischen 8:30-10:00, ist im Preis inbegriffen. <br/> Check-in ist zwischen 14:00 - 19:00 und Check-out bis 12:00 wenn nicht anders vereinbart.  <br/>
   </div>
   
 </div>
@@ -149,7 +150,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    puh +358- (0)40 704 6689
+    Tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
