--- a/villataika.fi/de/suites.html
+++ b/villataika.fi/de/suites.html
@@ -12,10 +12,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Suites (w.shower)" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Suites (ensuite)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Suites (w.shower)</title>
+  <meta http-equiv="Content-Language" content="de"/>  
+  <title>Bed &amp; Breakfast Villa Taika : Suites (ensuite)</title>
   
 </head>
 
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">asian elegance</div>
+      <div id="slogan">Asatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -40,48 +40,48 @@
             <a href="bed.html">Bed &amp; Breakfast</a>
           </li>
           <li >
-            <a href="booking.php">Reservation</a>
+            <a href="booking.php">Buchung</a>
           </li>
           <li >
-            <a href="groups.html">Groups</a>
+            <a href="groups.html">Gruppen</a>
           </li>
           <li >
-            <a href="map.html">Map</a>
+            <a href="map.html">Karte</a>
           </li>
           <li >
             <a href="photos.html">Photos</a>
           </li>
           <li >
-            <a href="activities.html">Activities</a>
+            <a href="activities.html">Aktivitäten</a>
           </li>
       </ul>
     </div>
     <div id="menuend"></div>
     <div id="lcontent">
       <h3 class="first"> 
-          <span>Rooms</span>
+          <span>Zimmer</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Suites (ensuite)</a></li>
+        <li><a href="deluxe.html">Deluxe (mit Toilette)</a></li>
+        <li><a href="standard.html">Standard</a></li>
       </ul>
 
       <div class="divider"></div>
     
-        <a href="suites.html" class='selected'>
+        <a href="../en/suites.html" >
           <img src="../images/en.gif" alt="en"/> </a>
         <a href="../fi/suites.html" >
           <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="../de/suites.html" >
+        <a href="suites.html" class='selected'>
           <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
-        <a href="news.html">  <span>News</span> </a>
+        <a href="news.html">  <span>Neues</span> </a>
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Affordable accommodation in redocorated granery 
+          Rustikale Unterkunft im renovierten Blockhaus 
         </a>
       </div>
     </div>
@@ -98,18 +98,18 @@
         </a>
       </div>
       <h2> Lotus Suite </h2>
-      The <b>Lotus Suite</b>  is a charming and spacious flat of about 40 m², with asian elegance. <br/> It has it's own bathroom with shower and toilet, and a <b>private terasse</b>. <br/> One can get a glimpse of the  nearby lake, and the terasse is a perfect place to enjoy the morning in the sun. <br/> There is a double bed, and plenty of space for up to three extra beds on request. <br/> The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes extra decoration with flowers and candles, and breakfeast can be served privately to the room or terasse.<br/> The room price for two is 95€. (Weddingpackage is 135€ for two)
+      Die <b>Lotus Suite</b> ist ein sehr geräumigiges Zimmer, eher Appartement, mit asiatischer Eleganz.<br/> Zusätzlich zum eigenen Badezimmer, Schlaf- und Vorraum, bietet Sie genug Platz für zwei Betten und dabei noch genug Platz zum Sizen. Ausserdem ist eine <b> private Terasse </b> angeschlossen, auf der sich auch im Herbst noch die Morgensoonne geniessen lässt.<br/> Der Preis für 2 ist 95€.
     </div>
   </div>
   <div class="box">
     <div class="boxinner">
       <div class="captionedimage">
-        <a href="../images/sun.jpg" rel="lightbox[suites]" title="Sun suite">
+        <a href="../images/sun.jpg" rel="lightbox[suites]" title="Sonnen Suite">
           <img src="../images/sun_small.jpg" />
         </a>
       </div>
-      <h2> Sun suite </h2>
-      The <b>Sun suite</b> is an elegant, sunny and spacious room. <br/> Traditional timberframing gives the room a rustic touch which counterpoints the elegant interiour with beautiful teak furniture.<br/> Facing south with large windows there is a sunny and light feeling in the room. Alsoit feels spacious as the ceilings are over 3m high.<br/> Shower and toilet are ensuite. There is a double bed and a space to fit two extra beds.<br/> The price for two is 90€/75€ single
+      <h2> Sonnen Suite </h2>
+      Die <b>Sonnen Suite</b> ist ein sehr elegantes und sonniges Zimmer. <br/> Traditonelles englisches timber-framing giebt dem Raum einen rusikalen Hauch der die elegante Atmosphäre mit Teakmöbeln kontrapunktiert.<br/> Die grossen süd-gerichteten Fenster und hohe Decke verleihen dem Zimmer ein leichtes, sonniges Gefühl.<br/> Dusche und Toilette sind ensuite und zusätlich zum Doppelbett ist Platz für ein Extra-Bett.<br/> Der Preis für 2 ist 90€ / Einzelbelegung 75€
     </div>
   </div>
   <div class="box">
@@ -120,7 +120,7 @@
         </a>
       </div>
       <h2> Amethyst room </h2>
-      The <b>Amethyst</b> room is a light and sunny room with handcarved relief. <br/> The room has is south facing  with large windows and high ceiling that give it a spacious feel.<br/> There is a private bathroom with shower and a double bed. One extra bed can be arranged. <br/> The price for two is 85€/70€ single
+      Das <b>Amethyst Zimmer</b> ist ein sonnig, helles Zimmer mit hand geschnitztem Relief. <br/> Das Zimmer ist nach Süden gerichtet und durch die grossen Fenster entsteht eine sehr geraümges Gefühl.<br/> Eine eigene Dusche und Toilette befindet geht direkt von der eigenen kleinen Eingangshalle ab. <br/> Der Preis für 2 ist 85€ / Einzelbelegung 70€
     </div>
   </div>
 
@@ -138,7 +138,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    tel +358- (0)40 704 6689
+    Tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
