--- a/villataika.fi/en/news.html
+++ b/villataika.fi/en/news.html
@@ -69,10 +69,12 @@
 
       <div class="divider"></div>
     
-        <a href="../fi/news.html" >  
-          <img src="../images/fi.gif" alt="fi"/> </a>
-        <a href="news.html" class='selected'>  
+        <a href="news.html" class='selected'>
           <img src="../images/en.gif" alt="en"/> </a>
+        <a href="../fi/news.html" >
+          <img src="../images/fi.gif" alt="fi"/> </a>
+        <a href="../de/news.html" >
+          <img src="../images/de.gif" alt="de"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -129,7 +131,7 @@
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
     <br/>
-    puh 040 704 6689
+    tel +358- (0)40 704 6689
   </div>
   <div class="kolmas">
     <a href="index.html">
